# ChatApp

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
chatClient/: CMakeLists.txt  async_client.cpp  echo_client.cpp
chatServer/: CMakeLists.txt  async_server.cpp  echo_server.cpp
docs/: mainfile.dox
networkLibrary/: CMakeLists.txt  networkLibrary.cpp  networkLibrary.h
utils/: CMakeLists.txt  Logger.cpp  Logger.h
